--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ header {
     width: 100%;
     height: 100vh;
     background-image: linear-gradient(var(--lg-color-1), var(--lg-color-2)),
-        url(header-image.png);
+        url(images/header-image.png);
     background-position: center;
     background-size: cover;
     padding: 10px 8%;
